--- a/deploy.env
+++ b/deploy.env
@@ -151,11 +151,11 @@ ADMIN_FRONTEND_PATH_PREFIX=/console
 # You would then need to set GOTRUE_MAILER_AUTOCONFIRM=false
 # Check for logs in gotrue service if there are any issues with email confirmation
 # Note that smtps will be used for port 465, otherwise plain smtp with optional STARTTLS
-GOTRUE_SMTP_HOST=smtp.gmail.com
+GOTRUE_SMTP_HOST=smtp.qiye.aliyun.com
 GOTRUE_SMTP_PORT=465
-GOTRUE_SMTP_USER=email_sender@some_company.com
-GOTRUE_SMTP_PASS=email_sender_password
-GOTRUE_SMTP_ADMIN_EMAIL=comp_admin@some_company.com
+GOTRUE_SMTP_USER=support@xiaomabiji.com
+GOTRUE_SMTP_PASS=Xiaomabiji@123
+GOTRUE_SMTP_ADMIN_EMAIL=support@xiaomabiji.com
 
 # AppFlowy Cloud Mailer
 # Note that smtps (TLS) is always required, even for ports other than 465
