--- a/nginx/nginx-simple.conf
+++ b/nginx/nginx-simple.conf
@@ -23,7 +23,7 @@ http {
         
         # Test service (simulating admin frontend)
         location /console {
-            proxy_pass http://test_service_backend/;
+            proxy_pass http://test_service_backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
