--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,246 +1,246 @@
-events { 
-    worker_connections 1024; 
+# Minimal nginx configuration for AppFlowy-Cloud
+# Self Hosted AppFlowy Cloud user should alter this file to suit their needs,
+# or use the appflowy.site.conf in external_proxy_config/nginx if they are using
+# an external proxy.
+
+events {
+    worker_connections 1024;
 }
 
 http {
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
-    
-    # Upstream definitions
-    upstream appflowy_cloud_backend {
-        server appflowy_cloud:8000;
+    # docker dns resolver
+    resolver 127.0.0.11 valid=10s;
+    #error_log /var/log/nginx/error.log debug;
+
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        '' close;
     }
-    
-    upstream gotrue_backend {
-        server gotrue:9999;
+
+    map $http_origin $cors_origin {
+        # AppFlowy Web origin
+        "~^http://localhost:3000$" $http_origin;
+        default "null";
     }
-    
-    upstream admin_frontend_backend {
-        server admin_frontend:3000;
-    }
-    
-    upstream redis_backend {
-        server redis:6379;
-    }
-    
-    # Rate limiting
-    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
-    
+
     server {
-        listen 80;
-        server_name api.xiaomabiji.com;
-        
-        # Health check
-        location /health {
-            return 200 "healthy\n";
-            add_header Content-Type text/plain;
-        }
-        
-        # GoTrue Auth Server
-        location /gotrue/ {
-            proxy_pass http://gotrue_backend/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-        
-        # WebSocket connections
-        location /ws {
-            proxy_pass http://appflowy_cloud_backend;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_read_timeout 86400s;
-        }
-        
-        # AppFlowy Cloud API
-        location /api {
-            limit_req zone=api burst=20 nodelay;
-            proxy_pass http://appflowy_cloud_backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Request-Id $request_id;
-            
-            # CORS headers
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, PATCH, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, Accept, Client-Version, Device-Id' always;
-            add_header 'Access-Control-Max-Age' 3600 always;
-            
-            if ($request_method = 'OPTIONS') {
-                return 204;
-            }
-        }
-        
-        # Admin Frontend
-        location /console {
-            proxy_pass http://admin_frontend_backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-        
-        # Admin Frontend API
-        location /web-api {
-            proxy_pass http://admin_frontend_backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-        
-        # Admin Frontend Web
-        location /web {
-            proxy_pass http://admin_frontend_backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-        
-        # Admin Frontend Assets
-        location /assets {
-            proxy_pass http://admin_frontend_backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-        
-        # Metrics endpoint
-        location /metrics {
-            proxy_pass http://appflowy_cloud_backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-        
-        # Default fallback
-        location / {
-            return 200 "AppFlowy-Cloud API Server is running!\n\nAvailable endpoints:\n- /api - AppFlowy Cloud API\n- /console - Admin Frontend\n- /gotrue - Authentication Server\n- /ws - WebSocket connections\n- /health - Health check\n- /metrics - Prometheus metrics";
-            add_header Content-Type text/plain;
+        listen 8080;
+
+        # https://github.com/nginxinc/nginx-prometheus-exporter
+        location = /stub_status {
+            stub_status;
         }
     }
-    
-    # HTTPS server (if SSL certificates are available)
+
+
     server {
-        listen 443 ssl http2;
-        server_name api.xiaomabiji.com;
-        
-        # SSL configuration
         ssl_certificate /etc/nginx/ssl/certificate.crt;
         ssl_certificate_key /etc/nginx/ssl/private_key.key;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
-        ssl_prefer_server_ciphers off;
-        
-        # Health check
-        location /health {
-            return 200 "healthy\n";
-            add_header Content-Type text/plain;
-        }
-        
-        # GoTrue Auth Server
+
+        listen 80;
+        listen 443 ssl;
+        client_max_body_size 10M;
+
+        underscores_in_headers on;
+        set $appflowy_cloud_backend "http://appflowy_cloud:8000";
+        set $gotrue_backend "http://gotrue:9999";
+        set $admin_frontend_backend "http://admin_frontend:3000";
+        set $appflowy_web_backend "http://appflowy_web:80";
+        set $minio_backend "http://minio:9001";
+        set $minio_api_backend "http://minio:9000";
+        # Host name for minio, used internally within docker compose
+        set $minio_internal_host "minio:9000";
+        set $pgadmin_backend "http://pgadmin:80";
+
+        # GoTrue
         location /gotrue/ {
-            proxy_pass http://gotrue_backend/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' $cors_origin always;
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
+                add_header 'Access-Control-Allow-Headers' '*' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, PATCH, OPTIONS' always;
+                add_header 'Access-Control-Max-Age' 3600 always;
+                add_header 'Content-Type' 'text/plain charset=UTF-8' always;
+                add_header 'Content-Length' 0 always;
+                return 204;
+            }
+
+            proxy_pass $gotrue_backend;
+
+            rewrite ^/gotrue(/.*)$ $1 break;
+
+            # Allow headers like redirect_to to be handed over to the gotrue
+            # for correct redirecting
+            proxy_set_header Host $http_host;
+            proxy_pass_request_headers on;
         }
-        
-        # WebSocket connections
+
+        # WebSocket
         location /ws {
-            proxy_pass http://appflowy_cloud_backend;
+            proxy_pass $appflowy_cloud_backend;
+
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
+            proxy_set_header Connection "Upgrade";
             proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
             proxy_read_timeout 86400s;
         }
-        
-        # AppFlowy Cloud API
+
         location /api {
-            limit_req zone=api burst=20 nodelay;
-            proxy_pass http://appflowy_cloud_backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_pass $appflowy_cloud_backend;
             proxy_set_header X-Request-Id $request_id;
-            
-            # CORS headers
-            add_header 'Access-Control-Allow-Origin' '*' always;
+            proxy_set_header Host $http_host;
+
+            # Set CORS headers for other requests
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' $cors_origin always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, PATCH, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, Accept, Client-Version, Device-Id' always;
+                add_header 'Access-Control-Max-Age' 3600 always;
+                return 204;
+            }
+
+            add_header 'Access-Control-Allow-Origin' $cors_origin always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, PATCH, OPTIONS' always;
             add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, Accept, Client-Version, Device-Id' always;
             add_header 'Access-Control-Max-Age' 3600 always;
-            
-            if ($request_method = 'OPTIONS') {
-                return 204;
+
+            location ~* ^/api/workspace/([a-zA-Z0-9_-]+)/publish$ {
+                proxy_pass $appflowy_cloud_backend;
+                proxy_request_buffering off;
+                client_max_body_size 256M;
+                if ($request_method = 'OPTIONS') {
+                    add_header 'Access-Control-Allow-Origin' $cors_origin always;
+                    add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, PATCH, OPTIONS' always;
+                    add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, Accept, Client-Version, Device-Id' always;
+                    add_header 'Access-Control-Max-Age' 3600 always;
+                    return 204;
+                }
+
+                add_header 'Access-Control-Allow-Origin' $cors_origin always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, PATCH, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, Accept, Client-Version, Device-Id' always;
+                add_header 'Access-Control-Max-Age' 3600 always;
+            }
+
+            # AppFlowy-Cloud
+            location /api/chat {
+                proxy_pass $appflowy_cloud_backend;
+
+                proxy_http_version 1.1;
+                proxy_set_header Connection "";
+                chunked_transfer_encoding on;
+                proxy_buffering off;
+                proxy_cache off;
+
+                proxy_read_timeout 600s;
+                proxy_connect_timeout 600s;
+                proxy_send_timeout 600s;
+            }
+
+            location /api/import {
+                proxy_pass $appflowy_cloud_backend;
+
+                # Set headers
+                proxy_set_header X-Request-Id $request_id;
+                proxy_set_header Host $http_host;
+
+                # Handle CORS
+                add_header 'Access-Control-Allow-Origin' $cors_origin always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, PATCH, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, Accept, Device-Id' always;
+                add_header 'Access-Control-Max-Age' 3600 always;
+
+                # Timeouts
+                proxy_read_timeout 600s;
+                proxy_connect_timeout 600s;
+                proxy_send_timeout 600s;
+
+                # Disable buffering for large file uploads
+                proxy_request_buffering off;
+                proxy_buffering off;
+                proxy_cache off;
+                client_max_body_size 2G;
             }
         }
-        
+
+        # Minio Web UI
+        # Derive from: https://min.io/docs/minio/linux/integrations/setup-nginx-proxy-with-minio.html
+        # Optional Module, comment this section if you did not deploy minio in docker-compose.yml
+        # This endpoint is meant to be used for the MinIO Web UI, accessible via the admin portal
+        location /minio/ {
+            proxy_pass $minio_backend;
+
+            rewrite ^/minio/(.*) /$1 break;
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-NginX-Proxy true;
+
+            ## This is necessary to pass the correct IP to be hashed
+            real_ip_header X-Real-IP;
+
+            proxy_connect_timeout 300s;
+
+            ## To support websockets in MinIO versions released after January 2023
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            # Some environments may encounter CORS errors (Kubernetes + Nginx Ingress)
+            # Uncomment the following line to set the Origin request to an empty string
+            # proxy_set_header Origin '';
+
+            chunked_transfer_encoding off;
+        }
+
+        # Optional Module, comment this section if you did not deploy minio in docker-compose.yml
+        # This is used for presigned url, which is needs to be exposed to the AppFlowy client application.
+        location /minio-api/ {
+            proxy_pass $minio_api_backend;
+
+            # Set the host to internal host because the presigned url was signed against the internal host
+            proxy_set_header Host $minio_internal_host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            rewrite ^/minio-api/(.*) /$1 break;
+
+            proxy_connect_timeout 300s;
+            # Default is HTTP/1, keepalive is only enabled in HTTP/1.1
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            chunked_transfer_encoding off;
+        }
+
+        # PgAdmin
+        # Optional Module, comment this section if you did not deploy pgadmin in docker-compose.yml
+        location /pgadmin/ {
+            set $pgadmin pgadmin;
+            proxy_pass $pgadmin_backend;
+
+            proxy_set_header X-Script-Name /pgadmin;
+            proxy_set_header X-Scheme $scheme;
+            proxy_set_header Host $host;
+            proxy_redirect off;
+        }
+
         # Admin Frontend
+        # Optional Module, comment this section if you did not deploy admin_frontend in docker-compose.yml
         location /console {
-            proxy_pass http://admin_frontend_backend;
+            proxy_pass $admin_frontend_backend;
+
+            proxy_set_header X-Scheme $scheme;
             proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
         }
-        
-        # Admin Frontend API
-        location /web-api {
-            proxy_pass http://admin_frontend_backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-        
-        # Admin Frontend Web
-        location /web {
-            proxy_pass http://admin_frontend_backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-        
-        # Admin Frontend Assets
-        location /assets {
-            proxy_pass http://admin_frontend_backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-        
-        # Metrics endpoint
-        location /metrics {
-            proxy_pass http://appflowy_cloud_backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-        
-        # Default fallback
+
+        # AppFlowy Web
         location / {
-            return 200 "AppFlowy-Cloud API Server is running!\n\nAvailable endpoints:\n- /api - AppFlowy Cloud API\n- /console - Admin Frontend\n- /gotrue - Authentication Server\n- /ws - WebSocket connections\n- /health - Health check\n- /metrics - Prometheus metrics";
-            add_header Content-Type text/plain;
+            proxy_pass $appflowy_web_backend;
+            proxy_set_header X-Scheme $scheme;
+            proxy_set_header Host $host;
         }
     }
-} 
+
+}
