--- a/deploy.env
+++ b/deploy.env
@@ -94,7 +94,7 @@ GOTRUE_DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_
 # GoTrue Admin Credentials
 # This user will be created when GoTrue starts successfully
 # You can use this user to login to the admin panel
-GOTRUE_ADMIN_EMAIL=admin@example.com
+GOTRUE_ADMIN_EMAIL=support@xiaomabiji.com
 GOTRUE_ADMIN_PASSWORD=password
 
 # JWT Configuration
@@ -159,11 +159,11 @@ GOTRUE_SMTP_ADMIN_EMAIL=support@xiaomabiji.com
 
 # AppFlowy Cloud Mailer
 # Note that smtps (TLS) is always required, even for ports other than 465
-APPFLOWY_MAILER_SMTP_HOST=smtp.gmail.com
+APPFLOWY_MAILER_SMTP_HOST=smtp.qiye.aliyun.com
 APPFLOWY_MAILER_SMTP_PORT=465
-APPFLOWY_MAILER_SMTP_USERNAME=email_sender@some_company.com
-APPFLOWY_MAILER_SMTP_EMAIL=email_sender@some_company.com
-APPFLOWY_MAILER_SMTP_PASSWORD=email_sender_password
+APPFLOWY_MAILER_SMTP_USERNAME=support@xiaomabiji.com
+APPFLOWY_MAILER_SMTP_EMAIL=support@xiaomabiji.com
+APPFLOWY_MAILER_SMTP_PASSWORD=Xiaomabiji@123
 APPFLOWY_MAILER_SMTP_TLS_KIND=wrapper # "none" "wrapper" "required" "opportunistic"
 
 # =============================================================================
