fix:抖音第三方登录配置环境变量

--- a/deploy.env
+++ b/deploy.env
@@ -199,6 +199,17 @@ GOTRUE_EXTERNAL_APPLE_REDIRECT_URI=${API_EXTERNAL_URL}/callback
 GOTRUE_SAML_ENABLED=false
 GOTRUE_SAML_PRIVATE_KEY=
 
+# Douyin OAuth2 (抖音开放平台)
+GOTRUE_EXTERNAL_DOUYIN_ENABLED=false
+GOTRUE_EXTERNAL_DOUYIN_CLIENT_ID=
+GOTRUE_EXTERNAL_DOUYIN_SECRET=
+GOTRUE_EXTERNAL_DOUYIN_REDIRECT_URI=${API_EXTERNAL_URL}/callback
+
+# 抖音开放平台直接配置 (用于PonyNotes自定义OAuth流程)
+DOUYIN_CLIENT_KEY=
+DOUYIN_CLIENT_SECRET=
+DOUYIN_REDIRECT_URI=${APPFLOWY_BASE_URL}/auth/douyin/callback
+
 # =============================================================================
 # 💾 FILE STORAGE: S3/MinIO configuration (required for file uploads)
 # =============================================================================
