fix:配置文件修改

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -160,6 +160,16 @@ services:
       - DOUYIN_CLIENT_KEY=${DOUYIN_CLIENT_KEY}
       - DOUYIN_CLIENT_SECRET=${DOUYIN_CLIENT_SECRET}
       - DOUYIN_REDIRECT_URI=${DOUYIN_REDIRECT_URI}
+      # 阿里云SMS配置 (用于短信验证码功能)
+      - ALIYUN_SMS_ACCESS_KEY_ID=${ALIYUN_SMS_ACCESS_KEY_ID}
+      - ALIYUN_SMS_ACCESS_KEY_SECRET=${ALIYUN_SMS_ACCESS_KEY_SECRET}
+      - ALIYUN_SMS_SIGN_NAME=${ALIYUN_SMS_SIGN_NAME}
+      - ALIYUN_SMS_TEMPLATE_CODE=${ALIYUN_SMS_TEMPLATE_CODE}
+      - ALIYUN_SMS_ENDPOINT=${ALIYUN_SMS_ENDPOINT:-dysmsapi.aliyuncs.com}
+      - ALIYUN_SMS_API_VERSION=${ALIYUN_SMS_API_VERSION:-2017-05-25}
+      - SMS_CODE_LENGTH=${SMS_CODE_LENGTH:-6}
+      - SMS_CODE_EXPIRE_MINUTES=${SMS_CODE_EXPIRE_MINUTES:-5}
+      - SMS_RATE_LIMIT_MINUTES=${SMS_RATE_LIMIT_MINUTES:-1}
     build:
       context: .
       dockerfile: Dockerfile
