--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -144,6 +144,23 @@ services:
       - DOUYIN_CLIENT_KEY=${DOUYIN_CLIENT_KEY}
       - DOUYIN_CLIENT_SECRET=${DOUYIN_CLIENT_SECRET}
       - DOUYIN_REDIRECT_URI=${DOUYIN_REDIRECT_URI}
+      # 阿里云SMS配置 (用于短信验证码功能)
+      - ALIYUN_SMS_ACCESS_KEY_ID=${ALIYUN_SMS_ACCESS_KEY_ID}
+      - ALIYUN_SMS_ACCESS_KEY_SECRET=${ALIYUN_SMS_ACCESS_KEY_SECRET}
+      - ALIYUN_SMS_SIGN_NAME=${ALIYUN_SMS_SIGN_NAME}
+      - ALIYUN_SMS_TEMPLATE_CODE=${ALIYUN_SMS_TEMPLATE_CODE}
+      - ALIYUN_SMS_ENDPOINT=${ALIYUN_SMS_ENDPOINT:-dysmsapi.aliyuncs.com}
+      - ALIYUN_SMS_API_VERSION=${ALIYUN_SMS_API_VERSION:-2017-05-25}
+      - SMS_CODE_LENGTH=${SMS_CODE_LENGTH:-6}
+      - SMS_CODE_EXPIRE_MINUTES=${SMS_CODE_EXPIRE_MINUTES:-5}
+      - SMS_RATE_LIMIT_MINUTES=${SMS_RATE_LIMIT_MINUTES:-1}
+      # 禁用代理以避免干扰阿里云SMS服务连接
+      - HTTP_PROXY=
+      - HTTPS_PROXY=
+      - http_proxy=
+      - https_proxy=
+      - NO_PROXY=
+      - no_proxy=
     ports:
       - 8000:8000
     depends_on:
