--- a/Cargo.toml
+++ b/Cargo.toml
@@ -146,6 +146,7 @@ futures-lite = "2.3.0"
 console-subscriber = { version = "0.4.1", optional = true }
 md5.workspace = true
 nanoid = "0.4.0"
+jsonwebtoken = "9.2"
 indexer.workspace = true
 llm-client.workspace = true
 async-openai.workspace = true
